# koyote

./: .gitignore  Cargo.toml  README.md
src/: compiler.rs  constants.rs  errormgr.rs  instructions.rs  lib.rs  macrolib.rs  main.rs  memory.rs  module.rs  objects.rs  opcodes.rs  parser.rs  rules.rs  scanner.rs  tokens.rs  utils.rs  utypes.rs  vm.rs
src/compiler/: compiler.rs
src/memory/: ram.rs
src/objects/: datatypes.rs
src/utils/: conversion.rs
src/vm/: vm.rs
testfiles/: test.cy
